--- a/public/css/classes.css
+++ b/public/css/classes.css
@@ -70,3 +70,9 @@ border: none;
     background-color: var(--hover-secondary);
     cursor: pointer;
 }
+
+.btn-disabled
+{
+    opacity: 0.4;
+    cursor: not-allowed;
+}
